updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the sole member of the midnight shift at a call center.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Oshawa, Ontario</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Coding (of course), drawing, playing videogames</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web developer? Not sure about anything more specific than that</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chatham, Ontario</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like to build things!</p>
     </section>
 
     <footer id="footer">
